--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ set (rhea_VERISON_MAJOR 0)
 set (rhea_VERSION_MINOR 1)
 configure_file("rhea_config.h.in" "rhea_config.h")
 
-add_executable(rhea main.cpp letter.cpp config.cpp FT.cpp)
+add_executable(rhea main.cpp letter.cpp config.cpp FT.cpp pair.cpp)
 
 SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")
 
@@ -16,7 +16,7 @@ endif (FREETYPE_FOUND)
 #find_package (OpenCV REQUIRED)
 #if (OpenCV_FOUND)
   include_directories(rhea "/usr/include/opencv2")
-  target_link_libraries (rhea m opencv_core opencv_imgproc opencv_highgui opencv_ml)
+  target_link_libraries (rhea m opencv_core opencv_imgproc opencv_highgui opencv_ml opencv_features2d opencv_objdetect )
 #else (OpenCV_FOUND)
 #  message("Couldnt find OpenCV!")
 #endif (OpenCV_FOUND)
