--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,15 @@ if (FREETYPE_FOUND)
   target_link_libraries (rhea ${FREETYPE_LIBRARIES})
 endif (FREETYPE_FOUND)
 
+find_package (GTK2 REQUIRED)
+if (GTK2_FOUND)
+  include_directories(${GTK2_INCLUDE_DIRS})
+  target_link_libraries (rhea ${GTK2_LIBRARIES})
+endif (GTK2_FOUND)
+
+include_directories(rhea "/usr/include/pango-1.0")
+target_link_libraries(rhea pthread pango-1.0 gobject-2.0 gmodule-2.0 gthread-2.0 rt glib-2.0)
+
 #find_package (OpenCV REQUIRED)
 #if (OpenCV_FOUND)
   include_directories(rhea "/usr/include/opencv2")
