--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,29 @@ CMakeCache.txt
 CMakeFiles
 Makefile
 bin
+
+bin/*
+rhea-rasterizer/bin/*
+rhea-linearizer/bin/*
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
